# robot_with_lidar_plugin

./: README.md
lidar_plugin/: CMakeLists.txt  vel.cc  velodyne_complete.world  velodyne_on_robot.world  velodyne_plugin.cc
